# tctx

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  bun.lockb  deno.json  mod.ts  package.json  pnpm-lock.yaml  readme.md  rollup.config.js  traceparent.test.ts  traceparent.ts  tracestate.test.ts  tracestate.ts  tsconfig.json  types.d.ts
.github/workflows/: ci.yml  rust.yml
bench/: bun.lockb  index.ts  package.json  pnpm-lock.yaml
cargo/: Cargo.toml
cargo/examples/: w3c_validation.rs
cargo/src/: lib.rs
imports/crypto/: default.js  node.js
imports/hex/: default.js  node.js
lib/: traceparent.bench.ts  traceparent.test.ts  traceparent.ts  tracestate.test.ts  tracestate.ts
npm/: package.json
scripts/: build.ts
src/: imports.d.ts  index.d.ts  index.test.ts  index.ts  lib.rs  traceparent.d.ts  traceparent.test.ts  traceparent.ts  tracestate.d.ts  tracestate.test.ts  tracestate.ts
test/: test.spec.ts
validation/: javascript.sh  rust.sh  test.sh  test_server.mjs  test_server.ts  w3c.sh
