[package]
name = "traceparent"
description = "w3c traceparents made simple"
version = "0.0.3"
license = "MIT"
authors = ["Marais Rossouw <me@marais.dev>"]
repository = "https://github.com/maraisr/tctx"
homepage = "https://github.com/maraisr/tctx"
documentation = "https://docs.rs/traceparent"
keywords = ["tracecontext","traceparent", "distributed", "tracing", "w3c"]
edition = "2018"

[dependencies]
anyhow = "1.0"
fastrand = "1.8"

[dev-dependencies]
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
